--- a/about.html
+++ b/about.html
@@ -144,11 +144,9 @@ Author URL: http://w3layouts.com
         <div class="container py-lg-5 py-4">
             <div class="mx-auto" style="max-width:800px">
                 <h3 class="title-style mb-4">Why hire me for your next project?</h3>
-                <p>I love to work in User Experience & User Interface designing. Because I love to solve the design
-                    problem
-                    and find easy and better solutions to solve it. I always try my best to make good user interface
-                    with
-                    the best user experience.</p>
+                <p>I love working as a Flutter app developer because I enjoy solving development problems and finding
+                    easy and better solutions. I always strive to create efficient and effective applications with the
+                    best user experience and interface design.</p>
                 <a href="services.html" class="btn btn-style mt-5">Learn More</a>
             </div>
         </div>
