Changed url s for app from store

--- a/index.html
+++ b/index.html
@@ -400,7 +400,10 @@
                         </span>
                     </a>
                     <!--i-add-->
-                    <a href="https://muhd-nish4d.github.io/xiaomi/" class="btn btn-style mt-3">click to See</a>
+                    <a href="https://play.google.com/store/search?q=safari%20cars&c=apps"
+                        class="btn btn-style mt-3 mx-1">Playstore</a>
+                    <a href="https://apps.apple.com/in/app/safari-cars/id6502545833" class="btn btn-style mt-3 mx-1">App
+                        Store</a>
                 </div>
                 <div class="col-lg-4 col-md-6 item mt-md-0 mt-4">
                     <!--Original-image-Size/740-540-->
@@ -413,7 +416,11 @@
                             <span class="content">POS app simple invoice printer app</span>
                         </span>
                     </a>
-                    <a href="https://muhd-nish4d.github.io/KTM/" class="btn btn-style mt-3">click to See</a>
+                    <a href="https://play.google.com/store/search?q=skypos&c=apps"
+                        class="btn btn-style mt-3 mx-1">Playstore</a>
+                    <a href="https://apps.apple.com/in/app/skyerp-pos-accounting/id6476906223"
+                        class="btn btn-style mt-3 mx-1">App
+                        Store</a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 item mt-lg-0 mt-4">
