--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <span class="content">POS app simple invoice printer app</span>
                         </span>
                     </a>
-                    <a href="https://play.google.com/store/search?q=skypos&c=apps"
+                    <a href="https://play.google.com/store/apps/details?id=com.skypos.app"
                         class="btn btn-style mt-3 mx-1">Playstore</a>
                     <a href="https://apps.apple.com/in/app/skyerp-pos-accounting/id6476906223"
                         class="btn btn-style mt-3 mx-1">App
