Removed contact button from intro side

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         </ul>
                     </div>
                     <!--<a href="#download" class="btn btn-style mt-5">Download CV</a>-->
-                    <a href="contact.html" class="btn btn-style mt-5">Contact Me</a>
+                    <!-- <a href="contact.html" class="btn btn-style mt-5">Contact Me</a> -->
                 </div>
             </div>
         </div>
