Removed company projects from portfolio

--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@
                 <h3 class="title-style">Some of my most recent projects</h3>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 item">
+                <!-- <div class="col-lg-4 col-md-6 item"> -->
                     <!--Original-image-Size/740-540-->
-                    <a href="assets/myimage/safari_cars_app.png" data-lightbox="example-set" data-title="Safari Cars"
+                    <!-- <a href="assets/myimage/safari_cars_app.png" data-lightbox="example-set" data-title="Safari Cars"
                         class="zoom d-block">
                         <img class="card-img-bottom d-block" src="assets/myimage/safari_cars_card.png"
                             alt="Card image cap">
@@ -398,16 +398,16 @@
                             <span class="title">Safari Cars</span>
                             <span class="content">Buy and Sell app for Safari Cars</span>
                         </span>
-                    </a>
+                    </a> -->
                     <!--i-add-->
-                    <a href="https://play.google.com/store/search?q=safari%20cars&c=apps"
+                    <!-- <a href="https://play.google.com/store/search?q=safari%20cars&c=apps"
                         class="btn btn-style mt-3 mx-1">Playstore</a>
                     <a href="https://apps.apple.com/in/app/safari-cars/id6502545833" class="btn btn-style mt-3 mx-1">App
                         Store</a>
                 </div>
-                <div class="col-lg-4 col-md-6 item mt-md-0 mt-4">
+                <div class="col-lg-4 col-md-6 item mt-md-0 mt-4"> -->
                     <!--Original-image-Size/740-540-->
-                    <a href="assets/myimage/skypos_explained.png" data-lightbox="example-set" data-title="SKY ERP"
+                    <!-- <a href="assets/myimage/skypos_explained.png" data-lightbox="example-set" data-title="SKY ERP"
                         class="zoom d-block">
                         <img class="card-img-bottom d-block" src="assets/myimage/sky_pos_card.png" alt="Card image cap">
                         <span class="overlay__hover"></span>
@@ -421,7 +421,7 @@
                     <a href="https://apps.apple.com/in/app/skyerp-pos-accounting/id6476906223"
                         class="btn btn-style mt-3 mx-1">App
                         Store</a>
-                </div>
+                </div> -->
 
                 <div class="col-lg-4 col-md-6 item mt-lg-0 mt-4">
                     <!--Original-image-Size/740-540-->
