updated after joining mediaplus & age 21

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             <li class="name-style">Age</li>
                             <li>:</li>
                             <li>
-                                <p>20 Years</p>
+                                <p>21 Years</p>
                             </li>
                         </ul>
                         <ul class="single-info">
@@ -243,6 +243,38 @@
                 <h3 class="title-style">Awesome Journey</h3>
             </div>
             <div class="row">
+                <div class="col-lg-6 mt-lg-0 mt-4">
+                    <h5 class="sub-title-timeline"><i class="fas fa-briefcase"></i> Experience</h5>
+                    <div class="timeline">
+                        <div class="column">
+                            <div class="title">
+                                <h2>Flutter Developer & Marketing</h2>
+                            </div>
+                            <div class="description">
+                                <p>Mediaplus - Doha, Qatar</p>
+                                <h6><i class="fas fa-calendar-alt"></i> Jul 2025 - Present</h6>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="title">
+                                <h2>Sr. App Developer</h2>
+                            </div>
+                            <div class="description">
+                                <p>Sky Secretary - Malappuram, Kerala, India</p>
+                                <h6><i class="fas fa-calendar-alt"></i> Dec 2023 - May 2025</h6>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="title">
+                                <h2>App Developer Intern</h2>
+                            </div>
+                            <div class="description">
+                                <p>Brototype - Calicut, Kerala, India</p>
+                                <h6><i class="fas fa-calendar-alt"></i> Dec 2022 - Nov 2023</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-6">
                     <h5 class="sub-title-timeline"><i class="fas fa-graduation-cap"></i> Education</h5>
                     <div class="timeline">
@@ -251,7 +283,7 @@
                                 <h2>Flutter Intern</h2>
                             </div>
                             <div class="description">
-                                <p>Brototype</p>
+                                <p>Brototype - Calicut, Kerala, India</p>
                                 <h6><i class="fas fa-calendar-alt"></i> Dec 2022 - Nov 2023</h6>
                             </div>
                         </div>
@@ -260,32 +292,8 @@
                                 <h2>Higher Studies</h2>
                             </div>
                             <div class="description">
-                                <p>GVHSS Alanallur</p>
+                                <p>GVHSS Alanallur - Palakkad, Kerala, India</p>
                                 <h6><i class="fas fa-calendar-alt"></i> 2020 - 2022</h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 mt-lg-0 mt-4">
-                    <h5 class="sub-title-timeline"><i class="fas fa-briefcase"></i> Experience</h5>
-                    <div class="timeline">
-                        <div class="column">
-                            <div class="title">
-                                <h2>Sr. App Developer</h2>
-                            </div>
-                            <div class="description">
-                                <p>Sky Secretary</p>
-                                <h6><i class="fas fa-calendar-alt"></i> Dec 2023 - Current</h6>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="title">
-                                <h2>App Developer Intern</h2>
-                            </div>
-                            <div class="description">
-                                <p>Brototype</p>
-                                <h6><i class="fas fa-calendar-alt"></i> Dec 2022 - Nov 2023</h6>
                             </div>
                         </div>
                     </div>
@@ -388,8 +396,8 @@
             </div>
             <div class="row">
                 <!-- <div class="col-lg-4 col-md-6 item"> -->
-                    <!--Original-image-Size/740-540-->
-                    <!-- <a href="assets/myimage/safari_cars_app.png" data-lightbox="example-set" data-title="Safari Cars"
+                <!--Original-image-Size/740-540-->
+                <!-- <a href="assets/myimage/safari_cars_app.png" data-lightbox="example-set" data-title="Safari Cars"
                         class="zoom d-block">
                         <img class="card-img-bottom d-block" src="assets/myimage/safari_cars_card.png"
                             alt="Card image cap">
@@ -399,15 +407,15 @@
                             <span class="content">Buy and Sell app for Safari Cars</span>
                         </span>
                     </a> -->
-                    <!--i-add-->
-                    <!-- <a href="https://play.google.com/store/search?q=safari%20cars&c=apps"
+                <!--i-add-->
+                <!-- <a href="https://play.google.com/store/search?q=safari%20cars&c=apps"
                         class="btn btn-style mt-3 mx-1">Playstore</a>
                     <a href="https://apps.apple.com/in/app/safari-cars/id6502545833" class="btn btn-style mt-3 mx-1">App
                         Store</a>
                 </div>
                 <div class="col-lg-4 col-md-6 item mt-md-0 mt-4"> -->
-                    <!--Original-image-Size/740-540-->
-                    <!-- <a href="assets/myimage/skypos_explained.png" data-lightbox="example-set" data-title="SKY ERP"
+                <!--Original-image-Size/740-540-->
+                <!-- <a href="assets/myimage/skypos_explained.png" data-lightbox="example-set" data-title="SKY ERP"
                         class="zoom d-block">
                         <img class="card-img-bottom d-block" src="assets/myimage/sky_pos_card.png" alt="Card image cap">
                         <span class="overlay__hover"></span>
@@ -650,11 +658,11 @@
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>-->
-                        <!-- <li>
-                            <a href="https://www.facebook.com/nishad.muhammed.1466126?mibextid=ZbWKwL">
+                        <li>
+                            <a href="https://www.facebook.com/share/164DiNx4t4/">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                        </li> -->
+                        </li>
                         <li>
                             <a href="https://www.linkedin.com/in/nish4dmuhammed/">
                                 <i class="fab fa-linkedin-in"></i>
@@ -675,6 +683,7 @@
                 <div class="cont-details col-md-6 contact-right mt-md-0 mt-5 ps-lg-0">
                     <p><i class="fas fa-map-marker-alt"></i>Konnadan(H), Karkkidamkunnu(PO), PIN Code: 678601,
                         Palakkad, Kerala.</p>
+                    <p><i class="fas fa-phone-alt"></i><a href="tel:+97430637926">+974 3063 7926</a></p>
                     <p><i class="fas fa-phone-alt"></i><a href="tel:+917012307207">+91 7012 307 207</a></p>
                     <p><i class="fas fa-envelope-open-text"></i><a href="mailto:mn0265616@gmail.com"
                             class="mail">nishadunlind@gmail.com</a></p>
@@ -713,11 +722,11 @@
                 <p class="mt-4 text-white">Keep in Touch.</p>
                 <div class="social-icons-main mt-4 pb-3">
                     <ul class="social-icons3">
-                        <!-- <li>
-                            <a href="https://www.facebook.com/nishad.muhammed.1466126?mibextid=ZbWKwL">
+                        <li>
+                            <a href="https://www.facebook.com/share/164DiNx4t4/">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                        </li> -->
+                        </li>
                         <li>
                             <a href="https://wa.me/+917012307207">
                                 <i class="fab fa-whatsapp"></i>
